# codeSnip

./: .gitignore  CMakeLists.txt
src/DDS/: test.cpp  test_new.cpp
src/algo/: list.cpp
src/basic/: helloworld.asm  helloworld.c  link.lds
src/const_char/: CMakeLists.txt  const_char.cpp
src/const_item3/: CMakeLists.txt  const_member.cpp
src/cpp_concurrency/: CMakeLists.txt  hello.cpp
src/cpp_down_up_cast/: cpp_upDownCast.cpp
src/cpp_others/: StacksizeofReference.cpp  for_each.cpp  sizeOfDeletorsInSharedPtr.cpp  sizeOfDeletorsInUniquePtr.cpp  value_fast_when_implicitConversion.cpp
src/cpp_static/: CMakeLists.txt  method_static.cpp  object_count.cpp  object_count_template.cpp
src/cpp_stl/: CMakeLists.txt  insert.cpp  new_delete.cpp  reduceMapAcc.cpp  remove_erase.cpp  set_compare.cpp  stl_new_delete.cpp
src/cpp_succeed/: CMakeLists.txt  cpp_multi.cpp  cpp_new_delete.cpp  cpp_virtual_call.cpp
src/cpp_template/: CMakeLists.txt  cpp_bloat.cpp  templateMatch.cpp  tmp.cpp  typename_class.cpp
src/cppmacro/: CMakeLists.txt  a.cpp  include_test.h  main.cpp
src/cxx_explicit/: CMakeLists.txt  explicit.cpp
src/fsm_parser/: parser.cpp
src/linux/: CMakeLists.txt  get_file_name.c  msgq_test.cpp  select_test_pub.cpp  shm_test.cpp  shm_test_sub.cpp  test.cpp
src/lvalue/: CMakeLists.txt  lvalue.cpp
src/macro/: CMakeLists.txt  a.c  main.c
src/mill/: c_with_variant_length_arg.cpp
src/modernCpp/: align.cpp  const_lifetime.cpp  initialistList_null_cmp.cpp
src/multi_thread/: CMakeLists.txt  multi_thread.cpp  multi_thread.h  multi_thread_test.cpp
src/new_delete/: new_delete.cpp
src/primer/: CMakeLists.txt  cpp_overload.cpp
src/promise/: CMakeLists.txt  promise_get_future.cpp
src/raii_item15/: CMakeLists.txt  raii_item.cpp
src/review/: byteRecv.cpp
src/shared_ptr/: CMakeLists.txt  PFMCtestV0.cpp  PFMCtestV1.cpp  deleteSptrGet.cpp  shared_ptr.cpp
src/thread_sched/: CMakeLists.txt  README.md  thread_sched.cpp
src/triger_error/: CMakeLists.txt
src/triger_error/return_local/: CMakeLists.txt  func.c  func.h  main.c
src/triger_error/void_empty_c_func/: CMakeLists.txt  main.c
src/variable_arg_template/: CMakeLists.txt  thread_raii.cpp
src/virtual_item7/: CMakeLists.txt  pure_virtual.cpp
